--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,9 @@
     "react"
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "syntax-dynamic-import",
+    "dynamic-import-node",
+    "transform-es2015-modules-commonjs"
   ]
 }
