--- a/package.json
+++ b/package.json
@@ -13,20 +13,29 @@
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-dynamic-import-node": "^1.0.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.27.3",
+    "enzyme": "^2.8.0",
     "eslint": "^3.18.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
     "path": "^0.12.7",
     "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "^0.16.0",
     "uglify-js": "^2.8.0",
@@ -38,11 +47,35 @@
     "webpack2-validator": "^1.0.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --env=dev --hot --inline",
-    "start:prod": "webpack-dev-server --env=prod",
+    "start": "yarn build:dev && webpack-dev-server --env=dev --hot --inline",
+    "start:prod": "yarn build:prod && webpack-dev-server --env=prod",
     "eslint": "./node_modules/eslint/bin/eslint.js ./app",
+    "test": "jest -o",
+    "test:all:dev": "yarn validate-webpack:dev && yarn eslint && jest",
+    "test:all:prod": "yarn validate-webpack:dev && yarn eslint && jest",
     "validate-webpack:dev": "./node_modules/webpack2-validator/dist/bin/webpack-validator.js webpack.config.js --env=dev",
-    "build:dev": "webpack --env=dev --progress --profile --colors",
-    "build:prod": "webpack --env=prod --progress --profile --colors"
+    "validate-webpack:prod": "./node_modules/webpack2-validator/dist/bin/webpack-validator.js webpack.config.js --env=prod",
+    "build:dev": "yarn test && webpack --env=dev --progress --profile --colors",
+    "build:prod": "yarn test && webpack --env=prod --progress --profile --colors"
+  },
+  "jest": {
+    "modulePaths": [
+      "/app"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css)$": "identity-obj-proxy"
+    },
+    "unmockedModulePathPatterns": [
+      "node_modules/react/",
+      "node_modules/enzyme/"
+    ]
   }
 }
