--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
     "path": "^0.12.7",
+    "postcss-custom-media": "^5.0.1",
     "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.2",
