--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Martins Giberts <martins.giberts@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
