--- a/package.json
+++ b/package.json
@@ -6,47 +6,47 @@
   "author": "Martins Giberts <martins.giberts@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "prop-types": "^15.5.8",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "prop-types": "15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-dynamic-import-node": "^1.0.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "css-loader": "^0.27.3",
-    "enzyme": "^2.8.0",
-    "eslint": "^3.18.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
-    "path": "^0.12.7",
-    "postcss-custom-media": "^5.0.1",
-    "postcss-loader": "^1.3.3",
-    "precss": "^1.4.0",
-    "react-addons-test-utils": "^15.4.2",
+    "autoprefixer": "6.7.7",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "19.0.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-dynamic-import-node": "1.0.1",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "enzyme": "2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.10.3",
+    "html-loader": "0.4.5",
+    "html-webpack-plugin": "2.28.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "19.0.2",
+    "jest-cli": "19.0.2",
+    "path": "0.12.7",
+    "postcss-custom-media": "5.0.1",
+    "postcss-loader": "1.3.3",
+    "precss": "1.4.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "3.0.0-beta.6",
-    "style-loader": "^0.16.0",
-    "uglify-js": "^2.8.0",
-    "uglifyjs-webpack-plugin": "^0.3.1",
-    "webpack": "^2.3.1",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-merge": "^4.1.0",
-    "webpack2-validator": "^1.0.0"
+    "style-loader": "^0.16.1",
+    "uglify-js": "^2.8.22",
+    "uglifyjs-webpack-plugin": "^0.4.3",
+    "webpack": "^2.4.1",
+    "webpack-cleanup-plugin": "0.5.1",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "4.1.0",
+    "webpack2-validator": "1.0.0"
   },
   "scripts": {
     "start": "yarn build:dev && webpack-dev-server --env=dev --hot --inline",
