--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     ["es2015", {"modules": false}],
     "stage-2",
-    "react"
+    "react",
+    "flow"
   ],
   "plugins": [
     "react-hot-loader/babel",
