--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
+    "flow-bin": "^0.45.0",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
     "identity-obj-proxy": "3.0.0",
@@ -51,14 +53,16 @@
     "webpack2-validator": "1.0.0"
   },
   "scripts": {
-    "build:dev": "yarn test && webpack --env=dev --progress --profile --colors",
-    "build:prod": "yarn test && webpack --env=prod --progress --profile --colors",
+    "build:dev": "yarn test:all:dev && webpack --env=dev --progress --profile --colors",
+    "build:prod": "yarn test:all:prod && webpack --env=prod --progress --profile --colors",
     "coverage": "jest --coverage --config ./jest.json",
     "eslint": "./node_modules/eslint/bin/eslint.js ./app",
+    "flow:all": "flow check --all",
+    "flow": "flow",
     "start:prod": "yarn build:prod && webpack-dev-server --env=prod",
     "start": "yarn build:dev && webpack-dev-server --env=dev --hot --inline",
-    "test:all:dev": "yarn validate-webpack:dev && yarn eslint && jest --config ./jest.json",
-    "test:all:prod": "yarn validate-webpack:prod && yarn eslint && jest --config ./jest.json",
+    "test:all:dev": "yarn flow && yarn validate-webpack:dev && yarn eslint && jest --config ./jest.json",
+    "test:all:prod": "yarn flow && yarn validate-webpack:prod && yarn eslint && jest --config ./jest.json",
     "test": "jest -o --config ./jest.json",
     "validate-webpack:dev": "./node_modules/webpack2-validator/dist/bin/webpack-validator.js webpack.config.js --env=dev",
     "validate-webpack:prod": "./node_modules/webpack2-validator/dist/bin/webpack-validator.js webpack.config.js --env=prod"
