--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
-    "flow-bin": "^0.45.0",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
     "identity-obj-proxy": "3.0.0",
@@ -57,12 +56,11 @@
     "build:prod": "yarn test:all:prod && webpack --env=prod --progress --profile --colors",
     "coverage": "jest --coverage --config ./jest.json",
     "eslint": "./node_modules/eslint/bin/eslint.js ./app",
-    "flow:all": "flow check --all",
-    "flow": "flow",
     "start:prod": "yarn build:prod && webpack-dev-server --env=prod",
-    "start": "yarn build:dev && webpack-dev-server --env=dev --hot --inline",
-    "test:all:dev": "yarn flow && yarn validate-webpack:dev && yarn eslint && jest --config ./jest.json",
-    "test:all:prod": "yarn flow && yarn validate-webpack:prod && yarn eslint && jest --config ./jest.json",
+    "start:dev:docker": "yarn && webpack-dev-server --host 0.0.0.0 --env=dev --hot --inline  --colors",
+    "start": "yarn && webpack-dev-server --env=dev --hot --inline  --colors",
+    "test:all:dev": "yarn validate-webpack:dev && yarn eslint && jest --config ./jest.json",
+    "test:all:prod": "yarn validate-webpack:prod && yarn eslint && jest --config ./jest.json",
     "test": "jest -o --config ./jest.json",
     "validate-webpack:dev": "./node_modules/webpack2-validator/dist/bin/webpack-validator.js webpack.config.js --env=dev",
     "validate-webpack:prod": "./node_modules/webpack2-validator/dist/bin/webpack-validator.js webpack.config.js --env=prod"
