--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "prop-types": "15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "styled-components": "^3.1.5"
   },
   "devDependencies": {
     "autoprefixer": "6.7.7",
@@ -23,7 +24,6 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.0",
     "enzyme": "2.8.2",
     "enzyme-to-json": "^1.5.1",
     "eslint": "^3.19.0",
@@ -36,9 +36,6 @@
     "jest": "19.0.2",
     "jest-cli": "19.0.2",
     "path": "0.12.7",
-    "postcss-custom-media": "5.0.1",
-    "postcss-loader": "1.3.3",
-    "precss": "1.4.0",
     "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "^15.5.4",
@@ -52,12 +49,12 @@
     "webpack2-validator": "1.0.0"
   },
   "scripts": {
-    "build:dev": "yarn test:all:dev && webpack --env=dev --progress --profile --colors",
+    "build:dev": "webpack --env=dev --progress --profile --colors",
     "build:prod": "yarn test:all:prod && webpack --env=prod --progress --profile --colors",
     "coverage": "jest --coverage --config ./jest.json",
     "eslint": "./node_modules/eslint/bin/eslint.js ./app",
     "start:prod": "yarn build:prod && webpack-dev-server --env=prod",
-    "start:dev:docker": "yarn && webpack-dev-server --host 0.0.0.0 --env=dev --hot --inline  --colors",
+    "start:dev:docker": "yarn && yarn build:dev && webpack-dev-server --host 0.0.0.0 --env=dev --hot --inline  --colors",
     "start": "yarn && webpack-dev-server --env=dev --hot --inline  --colors",
     "test:all:dev": "yarn validate-webpack:dev && yarn eslint && jest --config ./jest.json",
     "test:all:prod": "yarn validate-webpack:prod && yarn eslint && jest --config ./jest.json",
