--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,18 @@
-version: '3.2'
+version: '2'
 
 services:
   web:
-    image: node:9.4.0-alpine
+    build: .
     user: node
-    working_dir: /home/node/app
+    working_dir: /code
     environment:
       - NODE_ENV=dev
     volumes:
-      - ./:/home/node/app
+      - .:/code
+      - api-deps:/code/node_modules
     ports:
       - 8080:8080
-    command: "yarn start:dev:docker"
+    command: "yarn start"
+
+volumes:
+  api-deps:
