Configure DockerFile for development

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,14 +3,15 @@ logs
 *.log
 
 CNAME
+LICENSE
 .git
 .gitignore
 docker-compose.yml
 DockerFile
 index.html
-LICENSE
 README.md
 yarn.lock
+coverage
 
 build
 node_modules
