--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "coverage": "jest --coverage --config ./jest.json",
     "eslint": "./node_modules/eslint/bin/eslint.js ./app",
     "start:prod": "yarn build:prod && webpack-dev-server --env=prod",
-    "start:dev:docker": "yarn && yarn build:dev && webpack-dev-server --host 0.0.0.0 --env=dev --hot --inline  --colors",
-    "start": "yarn && webpack-dev-server --env=dev --hot --inline  --colors",
+    "start:dev:docker": "yarn && yarn build:dev && yarn start",
+    "start": "webpack-dev-server --host 0.0.0.0 --env=dev --hot --inline  --colors",
     "test:all:dev": "yarn validate-webpack:dev && yarn eslint && jest --config ./jest.json",
     "test:all:prod": "yarn validate-webpack:prod && yarn eslint && jest --config ./jest.json",
     "test": "jest -o --config ./jest.json",
