--- a/package.json
+++ b/package.json
@@ -6,58 +6,43 @@
   "author": "Martins Giberts <martins.giberts@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "prop-types": "15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "styled-components": "^3.1.5"
   },
   "devDependencies": {
-    "autoprefixer": "6.7.7",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "19.0.0",
     "babel-loader": "^7.0.0",
-    "babel-plugin-dynamic-import-node": "1.0.1",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "enzyme": "2.8.2",
-    "enzyme-to-json": "^1.5.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-to-json": "^3.3.1",
     "eslint": "^3.19.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
-    "html-loader": "0.4.5",
-    "html-webpack-plugin": "2.28.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.2.2",
+    "jest-cli": "^22.2.2",
     "path": "0.12.7",
     "react-addons-test-utils": "^15.5.1",
-    "react-hot-loader": "3.0.0-beta.6",
+    "react-hot-loader": "3.1.3",
     "react-test-renderer": "^15.5.4",
-    "style-loader": "^0.16.1",
-    "uglify-js": "^2.8.22",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^2.4.1",
-    "webpack-cleanup-plugin": "0.5.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-merge": "4.1.0",
-    "webpack2-validator": "1.0.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
-    "dev-server": "webpack-dev-server --host 0.0.0.0 --hot --inline  --colors",
-    "webpack": "webpack --progress --profile --colors",
-    "build:prod": "yarn test:all --env=prod && yarn webpack --env=prod",
-    "start:prod": "yarn build:prod && yarn dev-server --env=prod",
-    "start:dev:docker": "yarn webpack --env=dev && yarn start",
-    "start": "yarn dev-server --env=dev",
+    "build": "yarn test:all && webpack -p",
+    "start": "webpack-dev-server --hotOnly",
     "eslint": "eslint ./app",
-    "test:all": "yarn eslint && jest && yarn validate-webpack",
+    "test:all": "yarn eslint && jest",
     "test": "jest -o",
-    "test:watch": "jest --watch",
-    "validate-webpack": "webpack2-validator webpack.config.js"
+    "test:watch": "jest --watch"
   }
 }
