--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [
-    ["env", {"modules": false}],
+    [
+      "latest",
+      {"es2015": {"modules": false}}
+    ],
     "react"
   ],
   "plugins": [
