--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "martins-giberts.github.io",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "repository": "https://github.com/martins-giberts/martins-giberts.github.io.git",
   "author": "Martins Giberts <martins.giberts@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "styled-components": "^3.1.5"
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "styled-components": "3.1.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "eslint": "^3.19.0",
     "eslint-plugin-import": "2.2.0",
@@ -31,10 +31,9 @@
     "jest": "^22.2.2",
     "jest-cli": "^22.2.2",
     "path": "0.12.7",
-    "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "3.1.3",
-    "react-test-renderer": "^15.5.4",
-    "webpack": "^3.10.0",
+    "react-test-renderer": "16.2.0",
+    "webpack": "3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
