--- a/package.json
+++ b/package.json
@@ -6,42 +6,63 @@
   "author": "Martins Giberts <martins.giberts@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "styled-components": "3.1.6"
+    "react": "16.8.2",
+    "react-dom": "16.8.2",
+    "styled-components": "4.1.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "7.1.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
-    "eslint": "^3.19.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.3",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.2",
+    "@types/styled-components": "^4.1.10",
+    "awesome-typescript-loader": "^5.2.1",
+    "clean-webpack-plugin": "^1.0.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.2.2",
-    "jest-cli": "^22.2.2",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
+    "lint-staged": "^8.1.4",
     "path": "0.12.7",
-    "react-hot-loader": "3.1.3",
-    "react-test-renderer": "16.2.0",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "prettier": "^1.16.4",
+    "react-test-renderer": "16.8.2",
+    "ts-config": "^20.9.0",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.3.3",
+    "webpack": "4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
-    "build": "yarn test:all && webpack -p",
-    "start": "webpack-dev-server --hotOnly",
-    "eslint": "eslint ./app",
-    "test:all": "yarn eslint && jest",
-    "test": "jest -o",
-    "test:watch": "jest --watch"
+    "build-dll": "webpack --config webpack/webpack.library.ts",
+    "build": "yarn build-dll && webpack --config webpack/webpack.config.ts",
+    "build:prod": "NODE_ENV=production yarn build",
+    "dev": "yarn build-dll && webpack-dev-server --config webpack/webpack.config.ts",
+    "lint": "tslint --project tsconfig.json -c tslint.json",
+    "prettier": "prettier --write '**/*.{ts,tsx}'"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "trailingComma": "all"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn build:prod && git add .",
+      "commit-msg": "echo $HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.{ts,tsx}": ["yarn lint --fix", "yarn prettier", "git add ."]
+    }
   }
 }
