--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "@types/styled-components": "^4.1.10",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "enzyme-to-json": "^3.3.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
@@ -45,7 +42,7 @@
     "build:prod": "NODE_ENV=production yarn build",
     "dev": "yarn build-dll && webpack-dev-server --config webpack/webpack.config.ts",
     "lint": "tslint --project tsconfig.json -c tslint.json",
-    "prettier": "prettier --write '**/*.{ts,tsx}'"
+    "prettier": "prettier --write '**/*.{ts,tsx, md}'"
   },
   "prettier": {
     "printWidth": 120,
@@ -62,7 +59,7 @@
   },
   "lint-staged": {
     "linters": {
-      "*.{ts,tsx}": ["yarn lint --fix", "yarn prettier", "git add ."]
+      "*.{ts,tsx, md}": ["yarn lint --fix", "yarn prettier", "git add ."]
     }
   }
 }
