--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "clean-webpack-plugin": "^1.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
-    "lint-staged": "^8.1.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
     "path": "0.12.7",
     "prettier": "^1.16.4",
     "react-test-renderer": "16.8.3",
@@ -37,7 +35,7 @@
     "build": "yarn build-dll && webpack --config webpack/webpack.config.ts",
     "build:prod": "NODE_ENV=production yarn build",
     "dev": "yarn build-dll && webpack-dev-server --config webpack/webpack.config.ts",
-    "prettier": "prettier --write '**/*.{ts,tsx, md}'"
+    "prettier": "prettier --write '**/*.{ts,tsx, md, json}'"
   },
   "prettier": {
     "printWidth": 120,
@@ -53,8 +51,9 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "*.{ts,tsx, md}": ["yarn lint --fix", "yarn prettier", "git add ."]
-    }
+    "*.{ts,tsx, md, json}": [
+      "yarn lint --fix",
+      "yarn prettier"
+    ]
   }
 }
