--- a/package.json
+++ b/package.json
@@ -6,36 +6,37 @@
   "author": "Martins Giberts <martins.giberts@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "styled-components": "4.1.3"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "@types/react": "^16.8.4",
-    "@types/react-dom": "^16.8.2",
-    "@types/styled-components": "^4.1.10",
-    "awesome-typescript-loader": "^5.2.1",
-    "clean-webpack-plugin": "^1.0.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/styled-components": "^5.0.1",
+    "add-asset-html-webpack-plugin": "^3.1.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.2.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
-    "path": "0.12.7",
-    "prettier": "^1.16.4",
-    "react-test-renderer": "16.8.3",
-    "ts-config": "^20.9.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.3.3333",
-    "webpack": "4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0"
+    "path": "^0.12.7",
+    "prettier": "^2.0.4",
+    "ts-config": "^20.10.0",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "build-dll": "webpack --config webpack/webpack.library.ts",
-    "build": "yarn build-dll && webpack --config webpack/webpack.config.ts",
-    "build:prod": "NODE_ENV=production yarn build",
-    "dev": "yarn build-dll && webpack-dev-server --config webpack/webpack.config.ts",
-    "prettier": "prettier --write '**/*.{ts,tsx,md,json}'"
+    "build-bundle": "webpack --config webpack/webpack.config.ts",
+    "build:dev": "export NODE_ENV=development && yarn build-dll && yarn build-bundle",
+    "build": "export NODE_ENV=production && yarn build-dll && yarn build-bundle",
+    "dev": "yarn build:dev && NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.ts",
+    "format": "prettier --write '**/*.{ts,tsx,md,json,js,jsx,css}'",
+    "format:verify": "prettier --list-different '**/*.{ts,tsx,md,json,js,jsx,css}'"
   },
   "prettier": {
     "printWidth": 120,
@@ -51,8 +52,8 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,md,json}": [
-      "yarn prettier"
+    "*.{ts,tsx,md,json,js,jsx,css}": [
+      "yarn format:verify"
     ]
   }
 }
