--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/styled-components": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "husky": "^4.2.5",
@@ -30,13 +36,14 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "build-dll": "webpack --config webpack/webpack.library.ts",
-    "build-bundle": "webpack --config webpack/webpack.config.ts",
+    "build-dll": "webpack --config webpack/webpack.library.js",
+    "build-bundle": "webpack --config webpack/webpack.config.js",
     "build:dev": "export NODE_ENV=development && yarn build-dll && yarn build-bundle",
     "build": "export NODE_ENV=production && yarn build-dll && yarn build-bundle",
-    "dev": "yarn build:dev && NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.ts",
+    "dev": "yarn build:dev && NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.js",
     "format": "prettier --write '**/*.{ts,tsx,md,json,js,jsx,css}'",
-    "format:verify": "prettier --list-different '**/*.{ts,tsx,md,json,js,jsx,css}'"
+    "format:verify": "prettier --list-different '**/*.{ts,tsx,md,json,js,jsx,css}'",
+    "lint": "eslint -c .eslintrc.js --ignore-path ./.eslintignore --ext .js,.ts,.tsx,.json ."
   },
   "prettier": {
     "printWidth": 120,
@@ -53,7 +60,8 @@
   },
   "lint-staged": {
     "*.{ts,tsx,md,json,js,jsx,css}": [
-      "yarn format:verify"
+      "yarn format:verify",
+      "yarn lint"
     ]
   }
 }
