--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,21 +15,10 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/styled-components": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
-    "husky": "^4.2.5",
-    "lerna": "^3.20.2",
-    "lint-staged": "^10.1.3",
-    "path": "^0.12.7",
-    "prettier": "^2.0.4",
     "ts-config": "^20.10.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
@@ -43,27 +32,6 @@
     "build:dev": "export NODE_ENV=development && yarn build-dll && yarn build-bundle",
     "build": "export NODE_ENV=production && yarn build-dll && yarn build-bundle",
     "dev": "yarn build:dev && NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.js",
-    "format": "prettier --write '**/*.{ts,tsx,md,json,js,jsx,css}'",
-    "format:verify": "prettier --list-different '**/*.{ts,tsx,md,json,js,jsx,css}'",
-    "lint": "eslint -c .eslintrc.js --ignore-path ./.eslintignore --ext .js,.ts,.tsx,.json ."
-  },
-  "prettier": {
-    "printWidth": 120,
-    "bracketSpacing": true,
-    "singleQuote": true,
-    "arrowParens": "avoid",
-    "trailingComma": "all"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "echo $HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx,md,json,js,jsx,css}": [
-      "yarn format:verify",
-      "yarn lint"
-    ]
+    "lint": "eslint -c .eslintrc.js ."
   }
 }
