--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": "../../tsconfig.settings.json"
+  "extends": "../../tsconfig.settings.json",
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
